# job-hunting-preparer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: create-multiple-psql-databases.sh
src/: .env.example  __main__.py  main.py  resume.py
src/utils/: blob.py  db.py  envs.py
